# trex-runtime

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile.trex  README.md  deno.json  docker-compose-test.yml  docker-compose.yml  package.json  setup-v8-build.sh
.cargo/: config.toml
.github/workflows/: ci.yml  d2e-integration.yml  docker-build-push.yml  k6.yml  npm-ci.yml  plugin-ci.yml  release.disable
cli/: Cargo.toml
cli/src/: flags.rs  lib.rs  main.rs  server.rs
core/server/: env.ts  index.ts
core/server/auth/: authz.ts
core/server/lib/: dbm.ts
core/server/plugin/: flow.ts  ui.ts
core/server/routes/: dbm.ts
crates/base/: Cargo.toml  build.rs
crates/base/src/: inspector_server.rs  server.rs  snapshot.rs  timeout.rs
crates/base/src/macros/: test_macros.rs
crates/base/src/runtime/: mod.rs  permissions.rs  thread_utils.rs  unsync.rs
crates/base/src/utils/: test_utils.rs
crates/base/src/worker/: pool.rs  utils.rs  worker_inner.rs  worker_surface_creation.rs
crates/base/test_cases/envVarsMain/: index.ts
crates/base/test_cases/envVarsUser/: index.ts
crates/base/test_cases/eszip-silly-test/: index.ts
crates/base/test_cases/jsx-preact/: index.jsx
crates/base/test_cases/mainRuntimeCreation/: index.ts
crates/base/test_cases/osOps/: index.ts
crates/base/test_cases/readFile/: test_read_file_sync.ts
crates/base/test_cases/staticFs/: index.ts
crates/base/test_cases/user-worker-san-check/: index.ts
crates/base/test_cases/userRuntimeCreation/: index.ts
crates/base/tests/: eszip_migration.rs  integration_tests.rs
crates/base_rt/src/: lib.rs  runtime_state.rs
crates/cpu_timer/src/: lib.rs
crates/deno_facade/: Cargo.toml  emitter.rs  graph.rs  lib.rs  metadata.rs  permissions.rs  source_map_store.rs
crates/deno_facade/eszip/: migrate.rs  mod.rs  vfs.rs
crates/deno_facade/module_loader/: mod.rs  standalone.rs
crates/fs/: Cargo.toml  build.rs  lib.rs
crates/fs/impl/: deno_compile_fs.rs  prefix_fs.rs  s3_fs.rs  static_fs.rs  tmp_fs.rs  virtual_fs.rs
crates/fs/tests/: integration_tests.rs
crates/http_utils/src/: utils.rs
deno/: Cargo.toml  emit.rs  errors.rs  file_fetcher.rs  graph_util.rs  http_util.rs  import_map.rs  lib.rs  node.rs  npmrc.rs  resolver.rs
deno/args/: deno_json.rs  lockfile.rs  mod.rs  package_json.rs
deno/cache/: deno_dir.rs  disk_cache.rs  fast_check.rs  incremental.rs  mod.rs  module_info.rs  node.rs  parsed_source.rs
deno/npm/: byonm.rs  mod.rs
deno/npm/managed/: mod.rs  resolution.rs
deno/npm/managed/resolvers/: common.rs  global.rs  local.rs
deno/runtime/: errors.rs
deno/runtime/ops/: permissions.rs
deno/standalone/: binary.rs
deno/util/: checksum.rs  console.rs  diff.rs  draw_thread.rs  fs.rs  mod.rs
deno/util/progress_bar/: mod.rs  renderer.rs
deno/util/sync/: task_queue.rs
examples/main/: index.ts
examples/unstable-sloppy-imports/: index.ts
ext/ai/: lib.rs
ext/ai/js/onnxruntime/: cache_adapter.js
ext/ai/onnxruntime/: mod.rs  model.rs  onnx.rs  session.rs  tensor.rs
ext/bao/: .gitignore  Dockerfile  nbb.edn  package.json
ext/bao/scripts/: build-docker.sh
ext/bao/src/bao/: core.cljs
ext/chdb/: package.json
ext/core/js/: namespaces.js
ext/core/util/: fs.rs
ext/env/: lib.rs
ext/event_worker/: js_interceptors.rs  lib.rs
ext/node/: Cargo.toml  analyze.rs  lib.rs
ext/node/ops/crypto/: mod.rs
ext/node/ops/os/: cpus.rs
ext/node/polyfills/: 01_require.js  02_init.js  console.ts  http.ts  os.ts  repl.ts  worker_threads.ts
ext/node/polyfills/_fs/: _fs_close.ts
ext/node/polyfills/internal_binding/: constants.ts
ext/os/: lib.rs
ext/runtime/: Cargo.toml  cert.rs  external_memory.rs  lib.rs  upgrade.rs
ext/runtime/edge-runtime/deno/: auth_tokens.rs  http_util.rs
ext/runtime/edge-runtime/scripts/: clippy.sh
ext/runtime/js/: 01_http.js  98_global_scope_shared.js  bootstrap.js  fieldUtils.js  http.js  namespaces.js  wasm_memory_tracker.js
ext/runtime/ops/: bootstrap.rs  http.rs  http_start.rs  net.rs
ext/tpm/src/: lib.rs
ext/tpm/src/npm/: registry.rs  types.rs
ext/trex/: Cargo.toml  connection.rs  lib.rs  query_executor.rs
ext/trex/clients/: duckdb.rs  mod.rs  pgwire.rs  postgres.rs
ext/trex/conversions/: bool.rs  cdc_event.rs  hex.rs  mod.rs  numeric.rs  table.rs  table_row.rs  text.rs
ext/trex/js/: cdw_svc.js  dbconnection.js  trex_lib.js
ext/trex/pipeline/: mod.rs
ext/trex/pipeline/batching/: data_pipeline.rs  mod.rs  stream.rs
ext/trex/pipeline/sinks/: mod.rs  stdout.rs
ext/trex/pipeline/sinks/duckdb/: executor.rs  sink.rs
ext/trex/pipeline/sources/: mod.rs  postgres.rs
ext/trex/sql/: auth.rs  duckdb.rs
ext/trexas/: Cargo.toml  Dockerfile.trexas-builder  Makefile  extension-ci-tools  guide-local-trexas-build.md  package.json
ext/trexas/src/: bundle.rs  lib.rs  trex_server.rs
ext/workers/: context.rs  lib.rs  user_workers.js
plugins/runtime/: Cargo.toml  Makefile
plugins/runtime/.cargo/: config.toml
plugins/runtime/edge-runtime/: .dockerignore  Cargo.toml  Dockerfile.trex  docker-compose-test.yml  docker-compose.yml
plugins/runtime/edge-runtime/cli/: Cargo.toml
plugins/runtime/edge-runtime/deno/: errors.rs  file_fetcher.rs  node.rs
plugins/runtime/edge-runtime/examples/: deno.json
plugins/runtime/edge-runtime/scripts/: build.ts  test.sh
plugins/runtime/edge-runtime/test/: deno.json
plugins/runtime/src/: lib.rs
plugins/web/src/lib/: config.ts
scripts/: clippy.sh  run.sh
test/main/: index.ts  test_main.ts
trexsql/chdb/src/: functions.rs  safe_query_result.rs  types.rs  vtab.rs
trexsql/circe/: extension_config.cmake
trexsql/circe/src/: circe_extension.cpp  circe_functions.c
trexsql/hana/src/: hana_execute.rs  hana_scan.rs  lib.rs  wasm_lib.rs
trexsql/llama/src/: llama_backend_bridge.cpp  llama_capi.c  llama_functions.c
trexsql/pgt/src/: lib.rs
trexsql/pgt/src/rules/: patterns.rs
trexsql/pgwire/src/: pgwire_server.rs
trexsql/tpm/src/: lib.rs
trexsql/trexas/: Cargo.toml  Makefile  extension-ci-tools  package.json
trexsql/trexas/src/: lib.rs  trex_server.rs
types/: global.d.ts
(+97 files in other folders)
