[workspace]
resolver = "2"
members = [
  "cli",
  "crates/base",
  "crates/base_mem_check",
  "crates/base_rt",
  "crates/cpu_timer",
  "crates/deno_facade",
  "crates/eszip_trait",
  "crates/fs",
  "crates/http_utils",
  "deno",
  "ext/ai",
  "ext/ai/utilities",
  "ext/env",
  "ext/event_worker",
  "ext/node",
  "ext/os",
  "ext/trex",
  "ext/runtime",
  "ext/workers",
  "vendor/deno_console",
  "vendor/deno_os",
  "trexsql/trexas",
]
exclude = [
  "trexsql/hana",
  "trexsql/circe",
  "trexsql/chdb",
  "trexsql/llama",
  "trexsql/pgwire",
  "trexsql/pgt",
  "trexsql/tpm",
]

[workspace.package]
authors = ["Supabase <team@supabase.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/supabase/edge-runtime"

[workspace.dependencies]
deno = { path = "./deno" }

deno_ast = { version = "=0.50.3", features = ["transpiling"] }
deno_core = "0.363.0"
deno_error = "=0.7.0"
temporal_capi = { package = "ry_temporal_capi", version = "=0.0.11-ry.1", features = ["compiled_data"] }
# Pin timezone_provider to v0.0.14 to fix temporal_rs macro invocation error
# (v0.0.16 has breaking API changes in iana_normalizer_singleton!() macro)
# Note: rusty_v8 fork requires =0.0.14, but temporal_rs v0.0.11 requires ^0.0.16
# This creates a conflict - trexas cannot be built until the v8 fork is updated
timezone_provider = "=0.0.14"

deno_cache_dir = "=0.25.0"
deno_config = { version = "=0.71.0", features = ["workspace", "sync"] }
deno_graph = "=0.103.1"
deno_lockfile = "=0.32.2"
deno_media_type = { version = "=0.2.9", features = ["module_specifier"] }
deno_npm = "=0.42.0"
deno_package_json = { version = "=0.23.0", default-features = false }
deno_path_util = "=0.6.4"
deno_permissions = "0.80.0"
deno_semver = "=0.9.0"

# deno libs
deno_maybe_sync = "0.8.0"
deno_npm_cache = "0.40.0"
deno_npm_installer = { version = "0.16.0", path = "./vendor/deno_npm_installer" }
deno_terminal = "0.2.2"
deno_unsync = "0.4.4"
node_resolver = "0.59.0"

# upstream exts - updated to Deno 2.5.6 exact versions from upstream
deno_broadcast_channel = "0.215.0"
deno_cache = "0.153.0"
deno_canvas = "0.90.0"
deno_console = { path = "./vendor/deno_console" }
deno_crypto = "0.235.0"
deno_features = "0.18.0"
deno_fetch = "0.245.0"
deno_fs = { version = "0.131.0", features = ["sync_fs"] }
deno_http = "0.219.0"
deno_io = "0.131.0"
deno_net = "0.213.0"
deno_os = { path = "./vendor/deno_os" }
deno_signals = "0.12.0"
deno_telemetry = "0.43.0"
deno_tls = "0.208.0"
deno_tunnel = "0.8.0"
deno_url = "0.221.0"
deno_web = "0.252.0"
deno_webgpu = "0.188.0"
deno_webidl = "0.221.0"
deno_websocket = "0.226.0"
deno_webstorage = "0.216.0"

# local crates
base = { version = "0.1.0", path = "./crates/base" }
base_mem_check = { version = "0.1.0", path = "./crates/base_mem_check" }
base_rt = { version = "0.1.0", path = "./crates/base_rt" }
cli = { version = "0.1.0", path = "./cli" }
cpu_timer = { version = "0.1.0", path = "./crates/cpu_timer" }
deno_facade = { version = "0.1.0", path = "./crates/deno_facade" }
eszip_trait = { version = "0.1.0", path = "./crates/eszip_trait" }
fs = { version = "0.1.0", path = "./crates/fs" }
http_utils = { version = "0.1.0", path = "./crates/http_utils" }

# local exts
ext_ai = { version = "0.1.0", path = "./ext/ai" }
ext_ai_v8_utilities = { version = "0.1.0", path = "./ext/ai/utilities" }
ext_env = { version = "0.1.0", path = "./ext/env" }
ext_event_worker = { version = "0.1.0", path = "./ext/event_worker" }
ext_node = { version = "0.1.0", path = "./ext/node" }
ext_os = { version = "0.1.0", path = "./ext/os" }
ext_runtime = { version = "0.1.0", path = "./ext/runtime" }
ext_workers = { version = "0.1.0", path = "./ext/workers" }
trex_core = { version = "0.1.0", path = "./ext/trex" }

# local deps
clap = { version = "4.5.16", features = ["cargo", "string", "env"] }
ctor = "0.2.6"
either = "1"
enum-as-inner = "0.6.0"
eszip = "=0.104.0"
futures-util = "0.3.30"
fxhash = "0.2"
import_map = { version = "=0.24.0", features = ["ext"] }
num-traits = "0.2"
rkyv = "0.7"
serial_test = "3.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
twox-hash = { version = "=2.1.0", features = ["std", "xxhash64"], default-features = false }
urlencoding = "2.1.2"
xxhash-rust = "0.8"

# upstream deps
aes = "=0.8.3"
anyhow = "1.0.57"
async-once-cell = "0.5.4"
async-trait = "0.1.73"
base32 = "=0.5.1"
base64 = "0.21.7"
bencher = "0.1"
bincode = "=1.3.3"
boxed_error = "0.2.3"
brotli = { version = "6.0.0", features = ["ffi-api"] }
bytes = "1.4.0"
cache_control = "=0.2.0"
capacity_builder = "0.5.0"
cbc = { version = "=0.1.2", features = ["alloc"] }
cc = "1.0"
console_static_text = "=0.8.3"
crossterm = "0.28.1"
# Note: Do not use the "clock" feature of chrono, as it links us to CoreFoundation on macOS.
#       Instead use util::time::utc_now()
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
dashmap = "5.5.3"
data-encoding = "2.3.3"
data-url = "=0.3.1"
dissimilar = "=1.0.9"
dotenvy = "0.15.7"
duckdb = { version = "1.4.0", features = ["vtab-loadable", "vscalar", "vtab-arrow"] }
dyn-clone = "1.0.20"
ecb = "=0.1.2"
elliptic-curve = { version = "0.13.4", features = ["alloc", "arithmetic", "ecdh", "std", "pem", "jwk"] }
fast-socks5 = "0.9.6"
faster-hex = "0.9"
fastwebsockets = { version = "0.8", features = ["upgrade", "unstable-split"] }
flate2 = { version = "=1.0.30", default-features = false }
fqdn = "0.3.12"
fs3 = "0.5.0"
futures = "0.3.21"
glob = "0.3.1"
h2 = "0.4.4"
hickory-proto = "0.25.0-alpha.4"
hickory-resolver = { version = "0.25.0-alpha.4", features = ["serde"] }
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.2"
http_v02 = { package = "http", version = "0.2.9" }
httparse = "1.8.0"
hyper = { version = "1.4.1", features = ["full"] }
hyper-rustls = { version = "0.27.2", default-features = false, features = ["http1", "http2", "tls12", "ring"] }
hyper-util = { version = "0.1.17", features = ["tokio", "server", "server-auto"] }
hyper_v014 = { package = "hyper", version = "0.14.26", features = ["runtime", "http1"] }
indexmap = { version = "2", features = ["serde"] }
lazy-regex = "=3.1.0"
ipnet = "2.3"
ipnetwork = "0.20.0"
jsonc-parser = { version = "0.27.0", features = ["serde"] }
libc = "0.2.126"
libz-sys = { version = "1.1.20", default-features = false }
log = "0.4.20"
memchr = "2.7.4"
memmem = "0.1.1"
monch = "=0.5.0"
once_cell = "1.17.1"
parking_lot = "0.12.0"
path-clean = "=0.1.0"
pathdiff = "0.2.1"
notify = "=6.1.1"
num-bigint = { version = "0.4", features = ["rand"] }
p224 = { version = "0.13.0", features = ["ecdh"] }
p256 = { version = "0.13.2", features = ["ecdh", "jwk"] }
p384 = { version = "0.13.0", features = ["ecdh", "jwk"] }
percent-encoding = "2.3.0"
pretty_assertions = "=1.4.1"
phf = { version = "0.11", features = ["macros"] }
pin-project = "1.0.11" # don't pin because they yank crates from cargo
pin-project-lite = "0.2.13"
rand = "=0.8.5"
regex = "^1.7.0"
quinn = { version = "0.11.9", features = ["runtime-tokio", "rustls", "aws-lc-rs"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "socks", "json", "http2"] } # pinned because of https://github.com/seanmonstar/reqwest/pull/1955
reqwest_v011 = { package = "reqwest", version = "0.11", features = ["stream", "json", "multipart"] }
ring = "^0.17.14"
rustls = { version = "0.23.11", default-features = false, features = ["logging", "std", "tls12", "ring"] }
rustls-pemfile = "2"
rustc-hash = "2.1.1"
rustls-tokio-stream = "=0.8.0"
rustls-webpki = "0.102"
rusqlite = { version = "0.34.0", features = ["unlock_notify", "bundled", "session", "modern_sqlite", "limits", "backup"] }
scopeguard = "1.2.0"
sec1 = "0.7"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
sha1 = { version = "0.10.6", features = ["oid"] }
sha2 = { version = "0.10.8", features = ["oid"] }
signature = "2.1"
simd-json = "0.14.0"
smallvec = "1.8"
socket2 = { version = "0.5.7", features = ["all"] }
spki = "0.7.2"
sys_traits = { version = "=0.1.17", features = ["real", "winapi", "libc", "getrandom"] }
tar = "=0.4.43"
tempfile = "3.4.0"
thiserror = "2.0.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-metrics = { version = "0.3.0", features = ["rt"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }
tokio-socks = "0.5.1"
tokio-util = "0.7.4"
tokio-vsock = "0.7.2"
tower = { version = "0.4.13", default-features = false, features = ["util"] }
tower-http = { version = "0.6.1", features = ["decompression-br", "decompression-gzip"] }
tower-service = "0.3.2"
url = { version = "2.5", features = ["serde", "expose_internals"] }
uuid = { version = "1.3.0", features = ["v4"] }
web-transport-proto = "0.2.8"
webpki-root-certs = "0.26.5"
webpki-roots = "0.26"
yoke = { version = "0.7.4", features = ["derive"] }
zip = { version = "2.4.1", default-features = false, features = ["flate2"] }

opentelemetry = "0.27.0"
opentelemetry-http = "0.27.0"
opentelemetry-otlp = { version = "0.27.0", features = ["logs", "http-proto", "http-json"] }
opentelemetry-semantic-conventions = { version = "0.27.0", features = ["semconv_experimental"] }
opentelemetry_sdk = "0.27.0"

# upstream resolvers
deno_resolver = { version = "0.52.0", path = "./vendor/deno_resolver" }

# upstream deno extensions
deno_process = "0.36.0"
deno_subprocess_windows = "0.16.0"
deno_crypto_provider = "0.2.0"

# crypto
aws-lc-rs = "1.0.0"
ctr = { version = "0.9.2", features = ["alloc"] }
hkdf = "0.12.3"
rsa = { version = "0.9.3", default-features = false, features = ["std", "pem", "hazmat"] } # hazmat needed for PrehashSigner in ext/node

# webcpu
wgpu-core = "0.21.1"
wgpu-types = "0.20"
which = { version = "8.0.0", default-features = false }

# networking
netif = "0.1.6"

# signals
signal-hook = "0.3"

# unix
nix = "=0.27.1"

# windows deps
junction = "=0.2.0"
winapi = "=0.3.9"
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_Media", "Win32_Storage_FileSystem"] }

[patch.crates-io]
# Deno 2.5.6 upgrade - using p-hoffmann forks with upgraded dependencies
deno_core = { git = "https://github.com/p-hoffmann/deno_core", branch = "supabase-v0.363.0" }
# Using p-hoffmann eszip fork with Section method visibility fixes
eszip = { git = "https://github.com/p-hoffmann/eszip", branch = "supabase-v0.104.0-edge-runtime" }
# Using p-hoffmann rusty_v8 fork with Locker API for V8 140.2.0
v8 = { git = "https://github.com/p-hoffmann/rusty_v8", branch = "supabase-v140.2.0" }
# Patch timezone_provider to use v0.0.14 which has iana_normalizer_singleton!() without args
# (temporal_rs 0.0.11 calls the macro without args, but timezone_provider 0.0.16 requires an arg)
timezone_provider = { git = "https://github.com/boa-dev/temporal", tag = "v0.0.14" }

deno_unsync = { path = "./vendor/deno_unsync" }
deno_telemetry = { path = "./vendor/deno_telemetry" }
# Using local deno_net with stubbed op_tls_peer_certificate
deno_net = { path = "./vendor/deno_net" }
# Using local deno_io to remove op_set_raw (moved to deno_tty which isn't available in edge-runtime)
deno_io = { path = "./vendor/deno_io" }
# Using local deno_fs to remove op_set_raw from 30_fs.js (moved to deno_tty)
deno_fs = { path = "./vendor/deno_fs" }

[profile.dind]
inherits = "dev"

[profile.no-debug-assertions]
inherits = "dev"
debug-assertions = false

[profile.release]
debug = true
lto = "thin"
