[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "A server based on Deno runtime, capable of running JavaScript, TypeScript, and WASM services"

[lib]
name = "trex_cli"
path = "src/lib.rs"

[[bin]]
name = "trex"
path = "src/main.rs"

[dependencies]
deno.workspace = true
deno_core.workspace = true

deno_facade.workspace = true

trex_core.workspace = true
ext_event_worker = { workspace = true, optional = true, features = ["tracing"] }

anyhow.workspace = true
base.workspace = true
clap.workspace = true
glob.workspace = true
log.workspace = true
once_cell.workspace = true
rustls.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, optional = true }

env_logger = "=0.10.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

[features]
tracing = ["dep:tracing-subscriber", "dep:ext_event_worker"]
