[package]
name = "trex_core"
version = "0.1.0"
authors = [""]
edition = "2021"
license = "Apache-2.0"

[lib]
path = "lib.rs"

[dependencies]
deno_core.workspace = true
deno_error.workspace = true
duckdb.workspace = true
chrono = { version = "0.4.40", features = ["serde"] }
tracing-subscriber.workspace = true
thiserror = "1.0"
arrow-json = { version = "54.0.0" }
arrow-array = { version = "54.0.0", features = ["chrono-tz"] }
arrow-schema = { version = "54.0.0" }
arrow-data = { version = "54.0.0" }
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["v4"] }
base64.workspace = true



[dev-dependencies]
clap = { workspace = true, default-features = true, features = [
    "std",
    "derive",
] }
tracing-subscriber = { workspace = true, default-features = true, features = [
    "env-filter",
] }
serial_test.workspace = true

[features]
default = []

