[package]
name = "trexas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true


[dependencies]
duckdb = { version = "1.3.2", features = ["vtab-loadable", "vscalar", "vtab-arrow"] }
duckdb-loadable-macros = "0.1.9"
libduckdb-sys = { version = "1.3.2", features = ["loadable-extension"] }
trex_cli = { path = "../../cli", package = "cli" }
base = { path = "../../crates/base" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.42"
chrono = { version = "0.4", features = ["serde"] }
rustls.workspace = true

[features]
default = []
