[package]
name = "trexas"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true


[dependencies]
duckdb = { workspace = true, features = ["vtab-loadable", "vscalar"] }
duckdb-loadable-macros = "0.1.9"
libduckdb-sys = { version = "1.4.1", features = ["loadable-extension"] }
trex_cli = { path = "../../cli", package = "cli" }
deno_facade = { path = "../../crates/deno_facade" }
deno = { path = "../../deno" }
ext_workers = { path = "../workers" }
trex_core.workspace = true
base.workspace = true
anyhow.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
chrono = { version = "0.4", features = ["serde"] }
rustls.workspace = true
env_logger = "0.11"
tracing.workspace = true

[features]
default = []
